feat :[master] Best Practice code convention kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Road_Map_Android</string>
+
+    <string name="user_info">User Info:\nName: %s \nAge: %d</string>
 </resources>
